<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>org.epam.tc</groupId>
    <artifactId>Dmitry_Kuznetsov</artifactId>
    <version>1.0-SNAPSHOT</version>

    <properties>
        <maven.compiler.source>11</maven.compiler.source>
        <maven.compiler.target>11</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <testng.version>7.4.0</testng.version>
        <maven-surefire-plugin.version>3.0.0-M5</maven-surefire-plugin.version>
        <calculator.version>1.0</calculator.version>
        <assertj-core.version>3.20.0</assertj-core.version>
        <selenium-java.version>3.141.59</selenium-java.version>
        <webdrivermanager.version>4.4.3</webdrivermanager.version>
        <allure.version>2.13.2</allure.version>
        <aspectj.version>1.9.5</aspectj.version>
        <lombok.version>1.18.20</lombok.version>
        <cucumber-java.version>6.11.0</cucumber-java.version>
    </properties>

    <repositories>
        <repository>
            <id>libs</id>
            <url>file://${project.basedir}/libs</url>
        </repository>
    </repositories>

    <dependencies>
        <dependency>
            <groupId>com.epam.tat.module4</groupId>
            <artifactId>calculator</artifactId>
            <version>${calculator.version}</version>
        </dependency>
        <dependency>
            <groupId>org.testng</groupId>
            <artifactId>testng</artifactId>
            <version>${testng.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.assertj</groupId>
            <artifactId>assertj-core</artifactId>
            <version>${assertj-core.version}</version>
        </dependency>
        <dependency>
            <groupId>org.seleniumhq.selenium</groupId>
            <artifactId>selenium-java</artifactId>
            <version>${selenium-java.version}</version>
        </dependency>
        <dependency>
            <groupId>io.github.bonigarcia</groupId>
            <artifactId>webdrivermanager</artifactId>
            <version>${webdrivermanager.version}</version>
        </dependency>
        <dependency>
            <groupId>io.qameta.allure</groupId>
            <artifactId>allure-testng</artifactId>
            <version>${allure.version}</version>
        </dependency>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>${lombok.version}</version>
        </dependency>
        <dependency>
            <groupId>io.cucumber</groupId>
            <artifactId>cucumber-testng</artifactId>
            <version>${cucumber-java.version}</version>
        </dependency>
        <dependency>
            <groupId>io.cucumber</groupId>
            <artifactId>cucumber-java</artifactId>
            <version>${cucumber-java.version}</version>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>${maven-surefire-plugin.version}</version>
                <configuration>
                    <argLine>
                        --illegal-access=permit
                        -javaagent:"${settings.localRepository}/org/aspectj/aspectjweaver/${aspectj.version}/aspectjweaver-${aspectj.version}.jar"
                    </argLine>
                  <suiteXmlFiles>
                    <suiteXmlFile>${maven-surefire-plugin.suiteXmlFile}</suiteXmlFile>
                  </suiteXmlFiles>
                </configuration>
                <dependencies>
                    <dependency>
                        <groupId>org.aspectj</groupId>
                        <artifactId>aspectjweaver</artifactId>
                        <version>${aspectj.version}</version>
                    </dependency>
                </dependencies>
            </plugin>
        </plugins>
    </build>

    <profiles>
        <profile>
            <id>hw1-profile-all-test</id>
            <properties>
                <maven-surefire-plugin.suiteXmlFile>${project.build.testOutputDirectory}/testng/hw1-all-tests.xml</maven-surefire-plugin.suiteXmlFile>
            </properties>
        </profile>
        <profile>
            <id>hw1-profile-sum-and-subtract-test</id>
            <properties>
                <maven-surefire-plugin.suiteXmlFile>${project.build.testOutputDirectory}/testng/hw1-sum-and-subtract.xml</maven-surefire-plugin.suiteXmlFile>
            </properties>
        </profile>
        <profile>
            <id>hw1-profile-multiply-and-divide-test</id>
            <properties>
                <maven-surefire-plugin.suiteXmlFile>${project.build.testOutputDirectory}/testng/hw1-multiply-and-divide.xml</maven-surefire-plugin.suiteXmlFile>
            </properties>
        </profile>
        <profile>
            <id>hw2-profile-all-test</id>
            <properties>
                <maven-surefire-plugin.suiteXmlFile>${project.build.testOutputDirectory}/testng/hw2-all-tests.xml</maven-surefire-plugin.suiteXmlFile>
            </properties>
        </profile>
        <profile>
            <id>hw3-profile-all-test</id>
            <properties>
                <maven-surefire-plugin.suiteXmlFile>${project.build.testOutputDirectory}/testng/hw3-all-tests.xml</maven-surefire-plugin.suiteXmlFile>
            </properties>
        </profile>
        <profile>
            <id>hw4-profile-all-test</id>
            <properties>
                <maven-surefire-plugin.suiteXmlFile>${project.build.testOutputDirectory}/testng/hw4-all-tests.xml</maven-surefire-plugin.suiteXmlFile>
            </properties>
            <activation>
                <activeByDefault>true</activeByDefault>
            </activation>
        </profile>
    </profiles>

    <reporting>
        <excludeDefaults>true</excludeDefaults>
        <plugins>
            <plugin>
                <groupId>io.qameta.allure</groupId>
                <artifactId>allure-maven</artifactId>
                <version>2.10.0</version>
                <configuration>
                    <reportVersion>${allure.version}</reportVersion>
                </configuration>
            </plugin>
        </plugins>
    </reporting>

</project>